changes in to files

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="port.css">
+    <link rel="stylesheet" href="portfolio.css">
 </head>
 
 <body id="navbar">
@@ -18,11 +18,9 @@
     <div>
 
         <div id="pic">
-            <center><img id="kk" src="KAIF.jpg" alt="my pic!"></center>
-        </div>
-    </div>
-
-    <div>
+            <!-- <div class="Design"></div> -->
+            <center><img id="picture" src="KAIF.jpg" alt="my pic!"></center>
+          <div>
         <h3 id="mynameis">Hello,it's Me</h3>
         <h1 id="name">MOHD KAIF</h1>
     </div>
@@ -30,6 +28,10 @@
     <div id="about">
         <h4 id="edu"> PHOTOGRAPHER, DESIGNER, CODER </h4>
     </div>
+        </div>
+
+    </div>
+
     <footer>
         <!--div id="foot"><div style="background-color: cadetblue; height: 120px; width: 1500px;"-->
         <div class="tab">
